--- a/src/components/BusinessCapabilityTree/BusinessCapabilityTreeItem/BusinessCapabilityTreeItem.css
+++ b/src/components/BusinessCapabilityTree/BusinessCapabilityTreeItem/BusinessCapabilityTreeItem.css
@@ -8,12 +8,14 @@
     content: "\25B6";
     color: black;
     display: inline-block;
-    margin-right: 6px;
+    margin-right: 8px;
+    transform: rotate(90deg) scaleX(1.2);
+    font-size: 0.6em;
   }
   
 
   .caret-down::before {
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
   }
   
 
