--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,16 @@
   }
   
   .main-divider {
-    width: 1px;
+    width: 1.5px;
     background-color: #000000;
     margin-top: 10px;
+  }
+
+  .main-sidebar-divider {
+    height: 1.5px;
+    background-color: #000000;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
   }
   
